<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary_color"
    android:padding="5dp"
    android:id="@+id/parentRelative">


    <TextView
        android:id="@+id/game_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="8dp"
        android:textSize="15sp"
        android:textColor="@color/primary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Your coins: N" />

    <LinearLayout
        android:id="@+id/slots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/textlines"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/bet_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_coins">


        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/slot_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/slot_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/slot_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/current_bet"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/no_bet"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bet_button"
        style="@style/Button"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/bet"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spin_button"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toEndOf="@+id/current_bet" />

    <Button
        android:id="@+id/spin_button"
        style="@style/Button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/primary_text"
        android:text="@string/spin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/menu_button"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@color/primary_text"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>